# x-IMU3-Software

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  WindowsInstaller.iss  helpers.py  pyproject.toml  rustfmt.toml  setup.py  sort_includes.py  version.py
Examples/Cpp/: CMakeLists.txt  Helpers.hpp  README.md  generate_main.py  main.cpp
Examples/Cpp/Examples/: BluetoothConnection.h  Commands.h  Connection.h  DataLogger.h  Demux.h  FileConnection.h  FileConverter.h  GetAvailablePorts.h  GetPortNames.h  KeepOpen.h  MultipleConnections.h  MuxConnection.h  MuxScanner.h  NetworkAnnouncement.h  NetworkDiscovery.h  OpenAndPing.h  OpenAsync.h  Ping.h  PortScanner.h  SendCommands.h  SerialAccessory.h  SerialAccessoryLoopback.h  SerialConnection.h  SerialDiscovery.h  Settings.h  TcpConnection.h  UdpConnection.h  UsbConnection.h
x-IMU3-API/Rust/: Cargo.toml  build.rs  cbindgen.toml  publish.py
x-IMU3-API/Rust/src/: api_error.rs  charging_status.rs  command.rs  command_message.rs  connection.rs  connection_config.rs  connection_info.rs  connection_status.rs  connection_type.rs  data_logger.rs  decode_error.rs  decoder.rs  demux.rs  device.rs  discover.rs  dispatcher.rs  file_converter.rs  keep_open.rs  lib.rs  mux_message.rs  mux_scanner.rs  network_announcement.rs  network_discovery.rs  ping_response.rs  port_scanner.rs  receive_error.rs  receiver.rs  response.rs  serial_discovery.rs  settings.rs  statistics.rs
x-IMU3-API/Rust/src/ffi/: demux.rs  (+28 more)
x-IMU3-Bootloader/: CMakeLists.txt  Ximu3Bootloader.c  Ximu3Bootloader.h  ds30_Loader_Win_x64.lib  ds30_Loader_Win_x64_arm64_public.lib  ds30_Loader_Win_x64_public.lib  ds30_build_conf.h  ds30_loader.h
x-IMU3-GUI/: CMakeLists.txt
x-IMU3-GUI/Source/: ApplicationSettings.h  CommandMessage.h  ConnectionPanelContainer.cpp  ConnectionPanelContainer.h  Convert.h  CustomLookAndFeel.cpp  CustomLookAndFeel.h  DevicePanelContainer.cpp  DevicePanelContainer.h  DragOverlay.h  EscapedStrings.cpp  EscapedStrings.h  Helpers.h  KeyCompare.h  Main.cpp  MainComponent.h  NetworkDiscoveryDispatcher.h  ResponsesConverter.h  UIUtils.h  UIUtilsMac.mm
x-IMU3-GUI/Source/ConnectionPanel/: ConnectionPanel.cpp  ConnectionPanel.h  ConnectionPanelFooter.cpp  ConnectionPanelFooter.h  ConnectionPanelHeader.cpp  ConnectionPanelHeader.h  RecursivePing.h  WindowContainer.cpp  WindowContainer.h
x-IMU3-GUI/Source/DevicePanel/: DevicePanel.cpp  DevicePanel.h  DevicePanelFooter.cpp  DevicePanelFooter.h  DevicePanelHeader.cpp  DevicePanelHeader.h  Notifications.cpp  Notifications.h  WindowContainer.cpp  WindowContainer.h
x-IMU3-GUI/Source/DeviceSettings/: DeviceSettings.cpp  DeviceSettings.h  DeviceSettings.json  DeviceSettings.xml  DeviceSettingsEnums.xml  DeviceSettingsIDs.h  DeviceSettingsIds.h  DeviceSettingsItem.h  DeviceSettingsTypes.xml  Settings.json  device_settings.py  generate_device_settings.py
x-IMU3-GUI/Source/Dialogs/: AboutDialog.cpp  AboutDialog.h  ApplicationErrorsDialog.cpp  ApplicationErrorsDialog.h  ApplicationSettingsDialog.cpp  ApplicationSettingsDialog.h  ApplicationSettingsGroups.cpp  ApplicationSettingsGroups.h  AreYouSureDialog.cpp  AreYouSureDialog.h  AvailableConnectionsDialog.cpp  AvailableConnectionsDialog.h  ChangeDeviceNameDialog.cpp  ChangeDeviceNameDialog.h  CommandKeys.xml  CommandProgressDialog.cpp  CommandProgressDialog.h  ConvertFileDialog.cpp  ConvertFileDialog.h  ConvertFilesDialog.cpp  ConvertFilesDialog.h  ConvertingFileDialog.cpp  ConvertingFileDialog.h  ConvertingFilesDialog.cpp  ConvertingFilesDialog.h  DataLoggerSettingsDialog.cpp  DataLoggerSettingsDialog.h  Dialog.cpp  Dialog.h  ErrorDialog.cpp  ErrorDialog.h  FileConverterDialog.cpp  FileConverterDialog.h  FileConverterProgressDialog.cpp  FileConverterProgressDialog.h  LedColourDialog.cpp  LedColourDialog.h  ManualConnectionDialog.cpp  ManualConnectionDialog.h  MessageDialog.cpp  (+37 more)
x-IMU3-GUI/Source/Firmware/: Firmware.h  x-IMU3-Firmware-v0.7.hex  x-IMU3-Firmware-v1.0.0.hex  x-IMU3-Firmware-v1.0.1.hex  x-IMU3-Firmware-v1.0.2.hex  x-IMU3-Firmware-v1.0.3.hex  x-IMU3-Firmware-v1.1.0.hex  x-IMU3-Firmware-v1.1.1.hex  x-IMU3-Firmware-v1.1.2.hex  x-IMU3-Firmware-v1.1.3.hex  x-IMU3-Firmware-v2.1.0.hex  x-IMU3-Firmware-v2.1.1.hex  x-IMU3-Firmware-v2.1.2.hex  x-IMU3-Firmware-v2.1.3.hex  x-IMU3-Firmware-v2.2.0.hex  x-IMU3-Firmware-v2.2.1.hex  x-IMU3-Firmware-v2.3.0.hex  x-IMU3-Firmware-v2.3.1.hex  x-IMU3-Firmware-v2.4.0.hex  x-IMU3-Firmware-v2.5.0.hex  x-IMU3-Firmware-v2.5.1.hex  x-IMU3-Firmware-v2.5.2.hex  x-IMU3-Firmware-v2.5.3.hex  x-IMU3-Firmware-v2.5.4.hex
x-IMU3-GUI/Source/MenuStrip/: ConnectionHistory.cpp  ConnectionHistory.h  CustomLayouts.cpp  CustomLayouts.h  DefaultLayout.h  MenuStrip.cpp  MenuStrip.h  PreviousConnections.cpp  PreviousConnections.h  RecentConnections.cpp  RecentConnections.h  WindowLayouts.cpp  WindowLayouts.h
x-IMU3-GUI/Source/OpenGL/: AxesRange.h  Buffer.cpp  Buffer.h  GLRenderer.cpp  GLRenderer.h  GLResources.cpp  GLResources.h  Graph.cpp  Graph.h  GraphDataBuffer.cpp  GraphDataBuffer.h  GraphDataShader.h  GridLines.h  GridLinesShader.h  Model.cpp  Model.h  OpenGLComponent.cpp  OpenGLComponent.h  Shader.h  Text.cpp  Text.h  TextShader.h  ThreeDView.cpp  ThreeDView.h  ThreeDViewShader.h  ThreeDViewShaderWithMaterial.h  WavefrontObjFile.h
x-IMU3-GUI/Source/Widgets/: CommandProgressTable.cpp  CommandProgressTable.h  ConnectionsTable.cpp  ConnectionsTable.h  CustomComboBox.cpp  CustomComboBox.h  CustomTextEditor.h  CustomToggleButton.cpp  CustomToggleButton.h  DialogButton.cpp  DialogButton.h  DisabledOverlay.h  DiscoveredDevicesTable.cpp  DiscoveredDevicesTable.h  DragOverlay.h  FileSelector.cpp  FileSelector.h  Icon.h  IconAndText.h  IconButton.cpp  IconButton.h  Overlay.h  PopupMenuHeader.h  PortComboBox.cpp  PortComboBox.h  PortNameComboBox.cpp  PortNameComboBox.h  SerialAccessoryTerminal.cpp  SerialAccessoryTerminal.h  SerialAccessoryTextEditor.cpp  SerialAccessoryTextEditor.h  SerialPortComboBox.cpp  SerialPortComboBox.h  SimpleLabel.cpp  SimpleLabel.h  SimpleProgressBar.h  StatusIcon.h  StopWatch.cpp  Stopwatch.h  Terminal.cpp  (+3 more)
(+579 files in other folders)
