[package]
name = "ximu3"
version = "1.4.4"
authors = ["x-io Technologies Limited <info@x-io.co.uk>"]
edition = "2018"
description = "x-IMU3 API"
repository = "https://github.com/xioTechnologies/x-IMU3-Software"
license = "MIT"
build = "build.rs"

[lib]
crate-type = ["rlib", "staticlib", "dylib"]

[dependencies]
crossbeam = "0.8.4"
libc = "0.2.153"
regex = "1.10.3"
scan_fmt = "0.2.6"
serde = "1.0.197"
serde_json = "1.0.114"
serialport = "4.3.0"

[build-dependencies]
cbindgen = "0.26.0"
