[package]
name = "ximu3"
version = "1.5.6"
authors = ["x-io Technologies Limited <info@x-io.co.uk>"]
edition = "2018"
description = "x-IMU3 API"
repository = "https://github.com/xioTechnologies/x-IMU3-Software"
license = "MIT"
build = "build.rs"

[lib]
crate-type = ["rlib", "staticlib", "dylib"]

[dependencies]
crossbeam = "0.8.4"
libc = "0.2.169"
regex = "1.11.1"
scan_fmt = "0.2.6"
serde = "1.0.216"
serde_json = "1.0.133"
serialport = "4.6.1"

[build-dependencies]
cbindgen = "0.27.0"
