[package]
name = "ximu3"
version = "1.8.1"
authors = ["x-io Technologies Limited <info@x-io.co.uk>"]
edition = "2018"
description = "x-IMU3 API"
repository = "https://github.com/xioTechnologies/x-IMU3-Software"
license = "MIT"
build = "build.rs"

[lib]
crate-type = ["rlib", "staticlib", "dylib"]

[dependencies]
crossbeam = "0.8.4"
libc = "0.2.189"
scan_fmt = "0.2.6"
serde_json = { version = "1.0.151", features = ["preserve_order", "raw_value"] }
serialport = "4.9.0"
socket2 = "0.6.5"

[build-dependencies]
cbindgen = "0.29.4"
